[workspace]
resolver = "2"
members = ["crates/*"]
# `ingestion-exex-node` embeds the ingestion pipeline in a reth node as an ExEx
# (§5 adapter #1). reth's crates pin their own alloy/revm versions that clash
# with this workspace's `alloy = "1"` pin (the same clash that defers revm's
# `alloydb` in `simulation`), so it is kept OUT of the workspace with its own
# Cargo.lock — the default `cargo build --workspace --all-features` (CI) never
# resolves or compiles reth, and stays green on the pinned stable toolchain. Build
# it from its own directory. See crates/ingestion-exex-node/README.md.
exclude = ["crates/ingestion-exex-node"]

[workspace.package]
edition = "2021"
license = "proprietary"
publish = false

# Shared dependency versions. Pin and reference these from member crates with
# `dep = { workspace = true }`. Add crates here as services start needing them.
[workspace.dependencies]
# Internal crates (path deps — resolved by the `crates/*` glob above).
events    = { path = "crates/events" }
telemetry = { path = "crates/telemetry" }
db        = { path = "crates/db" }
# Shared ClickHouse migration runner (§4/§14): one `Migrator` implementation
# (apply/revert/status + the `migrate` CLI arm, with fail-fast set validation)
# that event-store, simulation and intelligence each bind to their OWN
# bookkeeping table + migration set — the runner is shared, the schemas are not.
ch-migrate = { path = "crates/ch-migrate" }
# Shared Kafka *producer* seam (§20): the `EventSink` trait + `KafkaEventSink` +
# the at-least-once `publish_resilient` policy, depended on by every event
# producer (ingestion, detection, …) so the producer config lives in one place.
event-bus = { path = "crates/event-bus" }
# Shared HTTP handler-error seam (§11): the `ApiError` type every internal/public
# HTTP surface (event-store, simulation-projection, the public API service)
# converts into, instead of each hand-rolling the same status+message+logging
# shape (see crates/api-error/src/lib.rs).
api-error = { path = "crates/api-error" }
# Detection seam (§6): `detector-api` is the thin, stable contract every detector
# builds against — the `DetectorPlugin` trait + `DetectionCtx`/enrichment, and
# nothing of the service's internals. The `detection` service crate re-exports it
# and *optionally* depends on the detector crates to assemble the roster
# (`register_builtins`); the detectors depend only on `detector-api`. So the graph
# is `detection → {sandwich,arb} → detector-api ← detection` — acyclic — and a
# closed/premium detector (§6) needs only the small `detector-api`, not the whole
# service.
detector-api     = { path = "crates/detector-api" }
detection        = { path = "crates/detection" }
sandwich-detector = { path = "crates/sandwich-detector" }
arb-detector      = { path = "crates/arb-detector" }
# Phase-3 detectors (§22, Sprint 10 t1) — same seam as sandwich/arb: each depends
# only on `detector-api` and is wired into `detection` as an optional dep behind a
# feature. `washtrading-detector` is the first `Scope::CrossBlock` writer (folds a
# trailing window into `CrossBlockState`), the rest are pure `Scope::Block`.
flashloan-detector    = { path = "crates/flashloan-detector" }
liquidation-detector  = { path = "crates/liquidation-detector" }
rugpull-detector      = { path = "crates/rugpull-detector" }
washtrading-detector  = { path = "crates/washtrading-detector" }
poisoning-detector    = { path = "crates/poisoning-detector" }
# Dev/test-only synthetic detector (§19): fires on a fixed schedule regardless of
# tx content, so the per-detector metrics + emit path can be demoed while the live
# source is header-only. Linked only behind detection's `demo` feature.
demo-detector     = { path = "crates/demo-detector" }
# Simulation service (§7) — the slow path. Sprint 5 builds its front half: the
# `dispatcher` (a thin Kafka consumer on `PreliminaryAlertCreated` that publishes
# the one `SimulationJob` *command* onto RabbitMQ, §2/§7) plus the `JobSink` seam
# the worker pool (task 3) will drain. The command is deliberately *not* a
# `DomainEvent` and never touches the event store — only its result re-enters the
# backbone — so it lives here, not in `events`.
simulation = { path = "crates/simulation" }
# Intelligence service (§8) — the moat. Sprint 7 t1 builds its data-store layer:
# Postgres (labels w/ provenance, versioned entities, attribution, sanctions),
# the Redis hot-path label/score cache, and the ClickHouse address-adjacency
# graph (§14). The event consumer + clustering land in t2–t5 on top of these seams.
intelligence = { path = "crates/intelligence" }
# Rule engine service (§9) — the commercial unlock. Sprint 9 t1 builds the
# `Rule`/`Condition`/`LogicOp`/`Action` model and the customer-isolated Postgres
# rule-definition store; the compiler/temporal state machine/consumer land in
# t2–t5 on top of the `RuleStore` seam.
rule-engine = { path = "crates/rule-engine" }

# Errors.
anyhow = "1"
thiserror = "2"

# Serialization & domain primitives (event schema, §2).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Derive-driven enum metadata so variant→string mappings can't drift (§2).
strum = { version = "0.27", features = ["derive"] }
# Stable content hashing for the detection model registry (§6): a detector's
# active config is hashed into the `config_hash` stamped onto every
# `DetectorTriggered`, so an alert is reproducible against an exact build (§18).
# A real cryptographic digest, not a hand-rolled hasher — config_hash is an
# audit identifier where collision-resistance matters. Pure-Rust, no system
# deps (keeps the self-contained-image goal). Hex-encoded via alloy's `hex`.
sha2 = "0.10"
# RFC-4180 CSV for the §8.1 public label feeds (Etherscan-style tag exports,
# Sprint 7 t2): name tags legitimately contain commas, so quoted CSV is parsed
# properly rather than split on ','. Tiny, boring, no optional features.
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
# CLI arg parsing (§21) — first pulled in by the `backtest` binary, whose
# hand-matched `std::env::args()` outgrew a single flag.
clap = { version = "4", features = ["derive"] }
# Snapshot/golden-file testing: a committed `.snap` fails loudly (with a
# reviewable diff) on *any* change to the value under test, `cargo insta`
# accepts intentional ones. Complements, not replaces, a directional
# regress-below-baseline gate (§18) — it also catches an *improvement* nobody
# reviewed, which such a gate deliberately lets pass.
insta = "1"
# Exact decimal thresholds for the §9 rule model (`TransferAmount { gt, lt }`).
# Money/amount comparisons must not go through f64 (the serde_json f64
# round-trip flake is a documented gotcha here); rust_decimal's default serde
# form is a *string*, so a stored rule round-trips its thresholds exactly.
rust_decimal = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
# alloy is the project's chosen Ethereum stack (§21) — use its type-safe
# Address/B256/U256 in the event schema rather than stringly-typed hashes.
alloy-primitives = { version = "1", features = ["serde"] }

# Ingestion source adapter (§5, Sprint 2): the RPC failover pool talks JSON-RPC
# to the chain over alloy's provider — adapter #3 of §5 (reth ExEx / node-IPC
# adapters #1/#2 slot in behind the same trait in Phase 8). The pool, health
# checks and circuit breaker are hand-rolled on top; alloy just carries each
# request to one endpoint.
#   alloy-provider     — the `Provider` trait + `RootProvider::new_http`. The
#     `reqwest-rustls-tls` feature picks reqwest's *rustls* TLS so the binary
#     needs no system OpenSSL (same self-contained-image goal as the rdkafka
#     vendored build below) while still reaching https mainnet endpoints.
#   alloy-rpc-types-eth — the `Block`/`Header`/`BlockNumberOrTag` RPC types the
#     provider returns; we read header fields (hash, parent_hash, timestamp).
#   alloy-transport    — `TransportError`, the typed RPC/transport failure the
#     circuit breaker counts against an endpoint.
alloy-provider = { version = "1", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-rpc-types-eth = "1"
alloy-transport = "1"
# Object-safe async trait for the `ChainSource` adapter seam (§5) so the service
# can hold a `dyn ChainSource` and swap adapters by config without generics
# rippling through it.
async-trait = "0.1"
# Parse + validate the configured RPC endpoint URLs once at boot.
url = "2"

# Async runtime (used by the trace-propagation demo; services adopt it as built).
# `net`/`signal`/`time` are for network services (axum listener, SIGTERM-driven
# graceful shutdown) — added when the event-store service landed (§4).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "signal", "time"] }

# RabbitMQ work-queue client (§7) — the one *command* broker. The simulation
# dispatcher publishes a `SimulationJob` to the durable `sim.jobs` quorum queue;
# the worker pool (Sprint 5 t3) drains it with per-job ack/redelivery. `lapin` is
# the de-facto async AMQP 0.9.1 client; it speaks publisher *confirms* (the
# at-least-once ack we need so a queued job is never silently lost) and per-message
# `priority`/`delivery_mode` (durable + priority 0–9, §7). lapin is executor-
# agnostic, so on tokio we hand it tokio's executor+reactor via these two adapter
# crates rather than letting it spin up its own `async-global-executor` threads —
# one runtime, no surprise thread pool. (The queue *topology* — quorum, priority
# args, dead-letter exchange — is declared in Sprint 5 t2, not here.)
lapin = "2"
tokio-executor-trait = "2"
tokio-reactor-trait = "1"

# CPU-bound work pool (§17): the detection service fans each block's Block-scoped
# detectors out over rayon (off the async reactor) — and the simulation workers
# (Sprint 5) run revm on it. A data-parallel pool, not async: the scheduler
# bridges to it via `spawn_blocking` so the reactor is never blocked.
rayon = "1"

# revm (§7) — the EVM the simulation worker pool runs each `SimulationJob` on. The
# slow path forks chain state and re-executes a `(block, tx_set)` bundle to confirm
# attacker profit / victim loss, so revm is the CPU bottleneck §20 scales hardest.
# `default-features = false` then re-add the precompile set we keep (secp256k1 +
# c-kzg + blst, pure-Rust, needing only the C toolchain the rdkafka build already
# requires) but drop the inspector `tracer` we don't use — trimming the heavy
# subtree (and the `cargo deny` surface) without losing precompile correctness.
# revm 41 unifies on `alloy-primitives` 1.x (the event schema's `Address`/`U256`),
# so engine types pass straight through. The `alloydb` fork-from-chain backend is
# deliberately NOT enabled here: it pins `alloy-provider` 2.0, which would clash
# with ingestion's 1.x — the live fork lands with the real `JobResolver` (Sprint 5
# t4 / Sprint 6), which is also where bundle resolution from the alert evidence is.
revm = { version = "41", default-features = false, features = [
    "std",
    "secp256k1",
    "c-kzg",
    "blst",
    "portable",
] }

# Event-store service (§4): HTTP append API + ClickHouse storage + Kafka ingest.
# axum    — internal append API (write-authenticated).
# clickhouse — official client; RowBinary inserts via `#[derive(Row)]`. The
#   `uuid` feature pulls in the UUID column (de)serializer (ClickHouse byte order).
# rdkafka — librdkafka bindings for the consumer (consumer groups + manual offset
#   commit). The default (configure-based) vendored build is used deliberately:
#   it auto-`--disable`s the optional curl/ssl/gssapi/zstd deps we don't enable,
#   so it compiles on a bare runner (CI, the slim Docker image) needing only a C
#   toolchain + make, and yields a near-self-contained binary (libz only) — right
#   for our PLAINTEXT Kafka. `cmake-build` is intentionally NOT used: cmake hard-
#   requires curl headers and broke CI. Production SASL_SSL: add the `ssl`/`sasl`
#   features here + the matching system libs in CI/Dockerfile when that lands.
#   `tokio` enables the async StreamConsumer.
# The `ws` feature turns on `axum::extract::ws` — the public API service's
# `WS /v1/stream` (§11), which fans out the provisional/confirmed/retracted
# alert lifecycle to connected clients.
axum = { version = "0.8", features = ["ws"] }
clickhouse = { version = "0.15", features = ["uuid", "chrono"] }
rdkafka = { version = "0.39", features = ["tokio"] }
# Production hardening for the network service:
# tower-http — TraceLayer (HTTP spans into the existing OTel stack) + TimeoutLayer.
# tokio-util — CancellationToken for cooperative, drain-then-exit shutdown.
# secrecy    — keep passwords/tokens out of `Debug`/logs; explicit `expose_secret()`.
# subtle     — audited constant-time comparison for the bearer token.
tower-http = { version = "0.7", features = ["trace", "timeout"] }
# `ServiceExt::oneshot` drives a router directly in tests (the `server` crate's
# JWT-middleware tests) without binding a real listener.
tower = { version = "0.5", features = ["util"] }
tokio-util = "0.7"
# `StreamExt::next` for draining lapin's `Consumer` stream in the simulation worker
# pool (§7) — tokio-native, so no second futures ecosystem is pulled in.
tokio-stream = "0.1"
secrecy = "0.10"
subtle = "2"

# Postgres (§14) — the mutable, transactional OLTP store for simulation's in-flight
# jobs + confirmed incidents (Sprint 6 t5), and later intelligence/rule-engine/
# notification/billing. sqlx is the async, compile-time-checked SQL toolkit: queries
# are verified against the live schema at build time and the check is cached into the
# committed `.sqlx/` dir so CI builds offline (`SQLX_OFFLINE=true`). `default-features
# = false` then re-add only what we use — `runtime-tokio` (share the service runtime),
# `tls-rustls` (pure-Rust TLS, same self-contained-image goal as rdkafka/alloy),
# `postgres`, the `macros` (compile-time `query!`), `migrate` (the sqlx migration
# machinery; the Postgres schema itself is applied by sqlx-cli via `just migrate-*`),
# and the `uuid`/`chrono` type integrations for the id/timestamp columns. Version
# tracks the installed sqlx-cli so the committed `.sqlx` cache format matches.
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
    # JSONB columns: the §9 rule store persists `conditions`/`temporal`/`actions`
    # as JSONB (a rule definition is a document, not a join target), bound as
    # `serde_json::Value` in the compile-checked queries.
    "json",
] }

# Redis (§8, §14) — the intelligence service's hot-path label/score cache
# (TTL-backed, evicted on update) so the synchronous screening path (§11) never
# touches Postgres. `default-features = false` drops the acl/streams/geospatial/
# script/num-bigint extras we don't use; re-added are only `tokio-comp` (share the
# service runtime — it pulls the async `aio` core) and `connection-manager` (a
# self-reconnecting multiplexed connection, so a Redis blip is a retried command,
# not a dead service). No TLS subtree for the password-auth'd dev topology
# (`rediss://` in production would add `tls-rustls` here, mirroring sqlx/alloy).
redis = { version = "1.3", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
] }

# Property-based testing (§18, Sprint 4 task 4): generate the *whole value space*
# of an input and assert an invariant holds across all of it, shrinking to a
# minimal counterexample on failure. Used for the detector invariants (a planted
# MEV pattern in arbitrary block noise is always found; every emitted finding is
# structurally valid) and the `DomainEvent` codec-totality round trip
# (`deserialize(serialize(x)) == x`) — the schema follow-up carried from Sprint 1.
# A dev-dependency only, never linked into a shipped binary.
proptest = "1"

# Integration testing against real ClickHouse/Kafka via throwaway containers
# (the `#[ignore]` tests CI's integration-test job runs).
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["clickhouse", "kafka"] }

# OpenAPI/Swagger. `utoipa` derives the spec from the types & handlers; the
# `chrono`/`uuid` features teach it those field types. `utoipa-swagger-ui` serves
# the interactive UI (its `axum` feature provides the router integration). The
# `events` crate gates its `ToSchema` derives behind an `openapi` feature so the
# schema crate stays dependency-free unless a service opts in.
utoipa = { version = "5", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# `utoipa-axum` binds the two: its `OpenApiRouter` + `routes!` register an axum
# route and its OpenAPI path from one `#[utoipa::path]` annotation, so the served
# routes and the spec can't drift (no hand-maintained `paths(...)` list).
utoipa-axum = "0.2"

# gRPC (§11/§8): `intelligence`'s first gRPC surface — a read-only
# `IntelligenceRead` service the public API service calls for risk scores/labels,
# instead of that hot Postgres/Redis path being reached over HTTP-JSON. `tonic` is
# the async gRPC runtime (server in `intelligence`, client-only in `server`);
# `tonic-prost`/`prost` are the message codec. Build-time codegen
# (`tonic-prost-build` + `protoc-bin-vendored`) lives only in `intelligence`'s
# `build.rs` — vendoring the `protoc` binary means no system `protobuf-compiler`
# package is needed in CI or the Docker build, the same "self-contained image"
# stance as the rdkafka/rustls choices above.
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

# JWT verification (§11): the public API service validates a caller-presented
# bearer JWT (`JWT_SECRET`/`JWT_ISSUER`) before serving any read endpoint. No
# issuance/login flow yet — no user/tenant store exists — so only the `Validation`
# half of this crate is used. `aws_lc_rs` picks the same crypto backend `reqwest`'s
# `rustls` feature already pulls in below, rather than adding a second (RustCrypto)
# backend just for HMAC.
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "aws_lc_rs"] }

# Outbound HTTP client (§11): the public API service proxies to event-store's and
# simulation-projection's existing internal read endpoints. `rustls-tls` keeps the
# self-contained-image stance (no system OpenSSL); `json` for the page-shaped
# response bodies.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "query"] }

# `WS /v1/stream` (§11): the public API service's own Kafka consumer, built on
# the shared `event-bus::run_consumer` loop (same as event-store's ingest),
# fans `PreliminaryAlertCreated`/`IncidentCreated`/`IncidentRetracted` out to
# connected WebSocket clients as `provisional_alert`/`alert_confirmed`/
# `alert_retracted`. `futures-util` is already pulled in transitively by axum's
# `ws` feature; naming it explicitly is what lets the handler `.split()` a
# `WebSocket` into its send/receive halves and drive them concurrently in one
# `tokio::select!`. `tokio-tungstenite` is dev-only — it drives a real client
# connection in the lifecycle test, pinned to the same version axum's `ws`
# feature itself depends on so only one copy resolves.
futures-util = "0.3"
tokio-tungstenite = "0.29"

# Observability (§19): tracing + W3C trace-context distributed tracing.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"

# Application metrics (§19): `metrics` is the lightweight facade a service records
# through at the call site (e.g. per-detector hit/latency). The recording is a
# near-free no-op until an exporter installs the global recorder, so the hot path
# needn't know whether anything is scraping. `metrics-exporter-prometheus` is that
# exporter — installed once per service (like `telemetry::init`), it owns the
# global recorder and serves the `/metrics` Prometheus scrape endpoint on its own
# HTTP listener (`http-listener`; the unused push-gateway path is trimmed).
# `metrics-util` is the test-only in-memory recorder used to assert on recorded
# series without standing up a scrape.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }
metrics-util = "0.20"

# Lints defined once, inherited by every crate via `[lints] workspace = true`.
# This is what makes `cargo build`/`clippy` enforce the same bar locally that CI
# does with `-D warnings`, instead of devs first learning about a lint in CI.
[workspace.lints.rust]
# No first-party `unsafe` in this codebase — a fraud/security system's own code
# stays safe. `forbid` (stronger than `deny`) can't be silently overridden with
# `#[allow]`; if a hot path ever genuinely needs unsafe, downgrade this to
# "deny" here, as a deliberate, reviewed workspace-level decision.
unsafe_code = "forbid"

[workspace.lints.clippy]
# Deny the default clippy lints (mirrors CI). `priority = -1` so individual
# lints below could override it; we keep none for now.
all = { level = "deny", priority = -1 }
