[package]
name = "arb-detector"
version = "1.0.0"        # mirrors the detector's `SemVer` build version (§6, §22).
edition.workspace = true
license.workspace = true
publish.workspace = true

# Arbitrage detector — `arb-v1.0` (§6, §22 Phase 2). An independent detector
# crate implementing `detection::DetectorPlugin`, attribution-blind: it reads a
# `DetectionCtx` (on-chain facts + enrichment, **no labels**) and returns
# behaviour-only `Evidence`. It depends on `detection` for the seam, but
# `detection` does **not** depend on it — the concrete roster is composed in the
# detection-service binary (Sprint 3 task 5), which avoids a Cargo dependency
# cycle while keeping each detector a separately-testable, selectively-open-
# sourced crate (§6).

[dependencies]
detector-api = { workspace = true }
events = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }

[dev-dependencies]
# Shared fixtures (`CtxBuilder`, `addr`/`b256`/`swap`) for the detector tests.
detector-api = { workspace = true, features = ["test-util"] }
# Property tests (§18, task 4): a closed-cycle arb planted in arbitrary block
# noise is always found, every finding is a genuine net-positive closed cycle,
# and the profit gate is monotone.
proptest = { workspace = true }

[lints]
workspace = true
