[package]
name = "ch-migrate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Shared ClickHouse migration runner (§4, §14). ClickHouse has no first-class
# migration tool the way Postgres has sqlx, so each owning service (event-store,
# simulation, intelligence) keeps a versioned `migrations/` directory and tracks
# applied versions in its OWN bookkeeping table — but the runner logic is one
# implementation, not three copies (it encodes operational behaviour: apply
# order, idempotency, the migrate CLI). Services stay §14-isolated: each
# constructs its own `Migrator` with its own table name + migration set.

[dependencies]
anyhow = { workspace = true }
clickhouse = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
