[package]
name = "db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
# The Postgres OLTP store (§14). This crate owns only the *shared* plumbing — the
# connection-pool builder — so every service that needs Postgres constructs its pool
# the same way; the per-service tables/repositories live in the owning service crate
# (no shared tables, §14). `tokio` is sqlx's async runtime.
sqlx.workspace = true
tokio.workspace = true
# Shared Redis plumbing (§8/§9) — the `redis` module's connection builder +
# transient/permanent classification, the Redis analog of the sqlx half above.
redis.workspace = true
