[package]
name = "detection"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Detection service (§6) — the fast path. The detector *seam* (the
# `DetectorPlugin` trait + `DetectionCtx`/enrichment) lives in the separate
# `detector-api` crate so detectors decouple from the service; this crate is the
# service side: the model registry (task 2), feature flags (task 2), and the
# compile-time `Registry` that collects detectors (task 1), re-exporting
# `detector-api` so `detection::DetectorPlugin` etc. keep resolving. Task 5 adds
# the synchronous emission core (`emit`, `state`); the async/Kafka consumer loop
# and rayon fan-out land in Sprint 4.

[[bin]]
name = "detection"
path = "src/main.rs"

[dependencies]
# The detector seam — re-exported so downstream keeps using `detection::*`.
detector-api = { workspace = true }
events = { workspace = true }
# Shared publish seam (§20) — the scheduler ships detector/alert events through
# the same `EventSink`/`publish_resilient` ingestion uses.
event-bus = { workspace = true }
telemetry = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
tracing = { workspace = true }

# Concurrency model (§17, Sprint 4 task 2): the async scheduler runs on `tokio`
# with bounded `mpsc` channels for inter-stage backpressure and a
# `CancellationToken` for graceful drain; `rayon` is the CPU pool the per-block
# Block-detector fan-out runs on (bridged off the reactor via `spawn_blocking`);
# `rdkafka` is the `BlockAssembled`/`BlockReverted` consumer + the producer behind
# `KafkaEventSink`; `async-trait` for the consumer/sink seams.
tokio = { workspace = true }
tokio-util = { workspace = true }
rayon = { workspace = true }
rdkafka = { workspace = true }
async-trait = { workspace = true }

# Model registry (§6, task 2). `chrono` carries each model card's `deployed_at`
# timestamp; `sha2` computes the `config_hash` that pins a detector's active
# config onto every emitted `DetectorTriggered` for reproducible replay (§18).
chrono = { workspace = true }
sha2 = { workspace = true }

# Built-in detectors (§6, task 4). Each is an *optional* dependency behind a
# feature of the same name; `register_builtins` wires it in under
# `#[cfg(feature = "…")]`, so the set of linked detectors — and therefore the
# binary's plugin roster — is fixed at compile time and selectable per build
# (premium detectors stay in closed builds, §6). Because the detectors depend on
# `detector-api` (not this crate), there's no dependency cycle.
sandwich-detector = { workspace = true, optional = true }
arb-detector = { workspace = true, optional = true }

[features]
default = []
# Link the open-source Phase-2 detectors (§22). A binary turns these on (or a
# superset including closed detectors) at build time; the library default links
# none, leaving the choice to the composing binary.
sandwich = ["dep:sandwich-detector"]
arb = ["dep:arb-detector"]
detectors = ["sandwich", "arb"]

[dev-dependencies]
# `MockDetector`/`dummy_evidence` for the registry/model tests — the seam's test
# doubles now live in `detector-api` behind its `test-util` feature.
detector-api = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
