[package]
name = "event-bus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# The shared Kafka *producer* seam (§20). Every service that publishes domain
# events — ingestion (chain events), detection (detector/alert events), and the
# simulation/intelligence producers to come — writes against the one `EventSink`
# trait here and ships through the one `KafkaEventSink`, so the producer config
# (acks=all, idempotence, chain-as-key, trace-header injection) and the
# at-least-once `publish_resilient` retry policy live in a single place rather
# than being re-derived per service. Consumers are not here: each consumer's
# decode/commit logic is service-specific (cf. event-store's `kafka.rs`).

[features]
# Exposes `event_bus::test_util` (the shared recording `EventSink`) to producer
# crates as a dev-dependency; off in normal builds so no test code ships. Adds
# no dependencies — the double uses only what the crate already pulls in.
test-util = []

[dependencies]
events = { workspace = true }
telemetry = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }

# librdkafka producer — the same vendored build the event-store consumer uses.
rdkafka = { workspace = true }

[lints]
workspace = true
