[package]
name = "event-bus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# The shared Kafka backbone seam (§20), both halves. Producers write against
# the one `EventSink` trait and ship through `KafkaEventSink`, so the producer
# config (acks=all, idempotence, partition keying, trace-header injection) and
# the at-least-once `publish_resilient` retry policy live in a single place.
# Consumers get the symmetric loops (`run_consumer` per-record,
# `batch::run_batch_consumer` per-flush for ClickHouse-style sinks) plus the
# cross-cutting facilities: `dlq` (dead-letter parking) and `lag` (the
# consumer-lag gauge).

[features]
# Exposes `event_bus::test_util` (the shared recording `EventSink`) to producer
# crates as a dev-dependency; off in normal builds so no test code ships. Adds
# no dependencies — the double uses only what the crate already pulls in.
test-util = []

[dependencies]
events = { workspace = true }
telemetry = { workspace = true }

chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
# §19 counters/gauges emitted by the shared consume machinery (batch flush
# outcomes, DLQ publishes, consumer lag) through the same facade every service
# records into.
metrics = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }

# librdkafka producer — the same vendored build the event-store consumer uses.
rdkafka = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }

[lints]
workspace = true
